<resources>
    <string name="app_name">Food Ordering App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="evaluate_the_application">Evaluate the Application</string>
    <string name="delete_my_credit_card_information">Delete My Credit Card Information</string>
    <string name="update_application">Update Application</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="user1">User1</string>
    <string name="phone">Phone</string>
    <string name="_000111222333">000111222333</string>
    <string name="email">Email</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="address">Address</string>
    <string name="antalya">Antalya</string>
</resources>